flowscape/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flowscape
  namespace: flowscape
  labels:
    app.kubernetes.io/name: flowscape
spec:
  selector:
    app.kubernetes.io/name: flowscape
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
